# 30-Days-Challenge

./: Day1 Task.docx
TASK 8/simple_calculator/: calculator.py  gui_calculator.py  main.py
Task1/: file
task 4/AIDD-30-Days-Challenge/: README.md
task 4/AIDD-30-Days-Challenge/Task_04/: agent.py  app.py  extract.py  gemini.md  main.py  pyproject.toml
task 4/AIDD-30-Days-Challenge/Task_04/task_04.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
